--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,8 @@ jobs:
         working-directory: backend
     steps:
       - uses: actions/checkout@v3
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
