--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,8 +44,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
-      - name: Build Backend
-        run: ./gradlew build
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - run: ./gradlew build
         working-directory: backend
       - name: Build Frontend
         run: npm run build
