--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,9 +57,14 @@ jobs:
         run: ./gradlew build
         working-directory: backend
 
+      - name: Install Frontend Dependencies
+        run: npm install
+        working-directory: frontend
+
       - name: Build Frontend
         run: npm run build
         working-directory: frontend
+
 
 
   package:
