--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,8 @@
-# Use an official JDK runtime as a parent image
 FROM openjdk:17-jdk-slim
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the JAR file into the container
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} registration_spring-0.0.1-SNAPSHOT.jar
+# Replace with the actual JAR file name from your Gradle build
+COPY build/libs/registration_spring-0.0.1-SNAPSHOT.jar app.jar
 
-# Run the JAR file
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
