--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:17-jdk-slim
 
 WORKDIR /app
 
-# Replace with the actual JAR file name from your Gradle build
-COPY build/libs/registration_spring-0.0.1-SNAPSHOT.jar app.jar
+# Copy the whole libs directory (safe and reliable)
+COPY build/libs/*.jar app.jar
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
