--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,9 +83,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - name: Download Backend JAR
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-jar
+          path: backend/build/libs
+
       - name: Dockerize Backend
         run: |
           docker build -t country-backend ./backend
+
       - name: Dockerize Frontend
         run: |
           docker build -t country-frontend ./frontend
